--- a/app/src/main/res/layout/activity_term_detail.xml
+++ b/app/src/main/res/layout/activity_term_detail.xml
@@ -122,7 +122,7 @@
         app:layout_constraintTop_toBottomOf="@+id/labelCurrentCourses" />
 
     <Button
-        android:id="@+id/termDetailCancelButton"
+        android:id="@+id/termRemoveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
