--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -7,183 +7,245 @@
     tools:context=".UI.CourseDetail">
 
 
-    <TextView
-        android:id="@+id/profNameLabel"
-        android:layout_width="40dp"
-        android:layout_height="45dp"
-        android:gravity="center"
-        android:text="Prof. Name"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@+id/labelCourseEnd2"
-        app:layout_constraintTop_toBottomOf="@+id/editNote" />
-
-    <EditText
-        android:id="@+id/profNameField"
-        android:layout_width="235dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:hint="Enter Professor Name"
-        android:inputType="textPersonName"
-        android:textColorHint="@color/hintText"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/editNote"
-        app:layout_constraintTop_toBottomOf="@+id/editNote" />
-
-    <TextView
-        android:id="@+id/labelCourseEnd2"
-        android:layout_width="40dp"
-        android:layout_height="45dp"
-        android:gravity="center"
-        android:text="Note"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editNote"
-        app:layout_constraintStart_toStartOf="@+id/labelCourseEnd" />
-
-    <TextView
-        android:id="@+id/labelCourseEnd"
-        android:layout_width="40dp"
-        android:layout_height="45dp"
-        android:gravity="center"
-        android:text="End Date"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextCourseEnd"
-        app:layout_constraintStart_toStartOf="@+id/labelCourseStart" />
-
-    <TextView
-        android:id="@+id/labelCourseStart"
-        android:layout_width="40dp"
-        android:layout_height="45dp"
-        android:gravity="center"
-        android:text="Start Date"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextCourseStart"
-        app:layout_constraintStart_toStartOf="@+id/labelCourseTitle" />
-
-    <EditText
-        android:id="@+id/editTextCourseTitle"
-        android:layout_width="235dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Enter Course Title"
-        android:inputType="textPersonName"
-        android:textColorHint="#D1D1D1"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/labelCourseTitle"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextCourseStart"
-        android:layout_width="235dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:focusable="false"
-        android:hint="Enter Course Start Date"
-        android:inputType="none"
-        android:textColorHint="@color/hintText"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/editTextCourseTitle"
-        app:layout_constraintTop_toBottomOf="@+id/editTextCourseTitle" />
-
-    <TextView
-        android:id="@+id/labelCourseTitle"
-        android:layout_width="40dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="10dp"
-        android:gravity="center"
-        android:text="Title"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextCourseTitle"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/editNote"
-        android:layout_width="235dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:hint="Enter Note"
-        android:inputType="textPersonName"
-        android:textColorHint="@color/hintText"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/editTextCourseEnd"
-        app:layout_constraintTop_toBottomOf="@+id/editTextCourseEnd" />
-
-    <TextView
-        android:id="@+id/labelAssessmentsCourseDetail"
-        android:layout_width="211dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="136dp"
-        android:gravity="center"
-        android:text="Assessments"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/coursesInsideCourseDetails"
-        app:layout_constraintHorizontal_bias="0.319"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editNote" />
-
-    <EditText
-        android:id="@+id/editTextCourseEnd"
-        android:layout_width="235dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:focusable="false"
-        android:hint="Enter Course End Date"
-        android:inputType="none"
-        android:textColorHint="@color/hintText"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/editTextCourseStart"
-        app:layout_constraintTop_toBottomOf="@+id/editTextCourseStart" />
-
-    <Button
-        android:id="@+id/courseDetailSaveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="52dp"
-        android:text="SAVE"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/coursesInsideCourseDetails"
-        app:layout_constraintTop_toBottomOf="@+id/coursesInsideCourseDetails" />
-
-    <Button
-        android:id="@+id/courseDetailAddAssessment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ADD ASSESSMENT"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@+id/courseRemoveButton"
-        app:layout_constraintTop_toBottomOf="@+id/courseRemoveButton" />
-
-    <Button
-        android:id="@+id/courseRemoveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="96dp"
-        android:onClick="goToCourseScreen"
-        android:text="REMOVE FROM TERM"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/courseDetailSaveButton"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/courseDetailSaveButton"
-        app:layout_constraintVertical_bias="0.857" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/coursesInsideCourseDetails"
-        android:layout_width="147dp"
-        android:layout_height="122dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/my_border_drawable"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/labelAssessmentsCourseDetail" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/courseDetailSaveButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="SAVE"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/coursesInsideCourseDetails" />
+
+                <TextView
+                    android:id="@+id/labelCourseStart"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:text="Start Date"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="@+id/labelCourseTitle"
+                    app:layout_constraintTop_toBottomOf="@+id/labelCourseTitle" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/assessmentsInsideCourseDetails"
+                    android:layout_width="222dp"
+                    android:layout_height="233dp"
+                    android:background="@drawable/my_border_drawable"
+                    app:layout_constraintEnd_toEndOf="@+id/editNote"
+                    app:layout_constraintStart_toStartOf="@+id/editNote"
+                    app:layout_constraintTop_toBottomOf="@+id/labelAssessmentsCourseDetail" />
+
+                <EditText
+                    android:id="@+id/editNote"
+                    android:layout_width="235dp"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:hint="Enter Note"
+                    android:inputType="textPersonName"
+                    android:textColorHint="@color/hintText"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toEndOf="@+id/labelCourseEnd2"
+                    app:layout_constraintTop_toTopOf="@+id/labelCourseEnd2" />
+
+                <TextView
+                    android:id="@+id/profNameLabel"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="48dp"
+                    android:gravity="center"
+                    android:text="Instructor Name"
+                    android:textColor="@color/black"
+                    android:textSize="8sp"
+                    app:layout_constraintStart_toStartOf="@+id/labelCourseEnd"
+                    app:layout_constraintTop_toBottomOf="@+id/labelCourseEnd" />
+
+                <EditText
+                    android:id="@+id/profNameField"
+                    android:layout_width="235dp"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:hint="Enter Instructor Name"
+                    android:inputType="textPersonName"
+                    android:textColorHint="@color/hintText"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toEndOf="@+id/profNameLabel"
+                    app:layout_constraintTop_toTopOf="@+id/profNameLabel" />
+
+                <TextView
+                    android:id="@+id/profPhone"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:text="Instructor Phone"
+                    android:textColor="@color/black"
+                    android:textSize="8sp"
+                    app:layout_constraintStart_toStartOf="@+id/profNameLabel"
+                    app:layout_constraintTop_toBottomOf="@+id/profNameLabel" />
+
+                <EditText
+                    android:id="@+id/profPhoneField"
+                    android:layout_width="235dp"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:hint="Enter Instructor Name"
+                    android:inputType="textPersonName"
+                    android:textColorHint="@color/hintText"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toEndOf="@+id/profPhone"
+                    app:layout_constraintTop_toBottomOf="@+id/profNameLabel" />
+
+                <TextView
+                    android:id="@+id/profEmail"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:text="Instructor Email"
+                    android:textColor="@color/black"
+                    android:textSize="8sp"
+                    app:layout_constraintStart_toStartOf="@+id/profPhone"
+                    app:layout_constraintTop_toBottomOf="@+id/profPhone" />
+
+                <EditText
+                    android:id="@+id/profEmailField"
+                    android:layout_width="235dp"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:hint="Enter Instructor Name"
+                    android:inputType="textPersonName"
+                    android:textColorHint="@color/hintText"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toEndOf="@+id/profEmail"
+                    app:layout_constraintTop_toBottomOf="@+id/profPhone" />
+
+                <EditText
+                    android:id="@+id/statusField"
+                    android:layout_width="235dp"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:hint="Select Course Status"
+                    android:inputType="textPersonName"
+                    android:textColorHint="@color/hintText"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toEndOf="@+id/labelCourseStatus"
+                    app:layout_constraintTop_toBottomOf="@+id/labelCourseEnd" />
+
+                <TextView
+                    android:id="@+id/labelCourseTitle"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="8dp"
+                    android:gravity="center"
+                    android:text="Title"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/labelCourseEnd"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:text="End Date"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="@+id/labelCourseStart"
+                    app:layout_constraintTop_toBottomOf="@+id/labelCourseStart" />
+
+                <TextView
+                    android:id="@+id/labelCourseStatus"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:text="Status"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="@+id/labelCourseEnd"
+                    app:layout_constraintTop_toBottomOf="@+id/labelCourseEnd" />
+
+                <EditText
+                    android:id="@+id/editTextCourseStart"
+                    android:layout_width="235dp"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:focusable="false"
+                    android:hint="Enter Course Start Date"
+                    android:inputType="none"
+                    android:textColorHint="@color/hintText"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toEndOf="@+id/labelCourseStart"
+                    app:layout_constraintTop_toTopOf="@+id/labelCourseStart" />
+
+                <TextView
+                    android:id="@+id/labelCourseEnd2"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:text="Note"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="@+id/profEmail"
+                    app:layout_constraintTop_toBottomOf="@+id/profEmail" />
+
+                <EditText
+                    android:id="@+id/editTextCourseTitle"
+                    android:layout_width="235dp"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:hint="Enter Course Title"
+                    android:inputType="textPersonName"
+                    android:textColorHint="#D1D1D1"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toEndOf="@+id/labelCourseTitle"
+                    app:layout_constraintTop_toTopOf="@+id/labelCourseTitle" />
+
+                <EditText
+                    android:id="@+id/editTextCourseEnd"
+                    android:layout_width="235dp"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:focusable="false"
+                    android:hint="Enter Course End Date"
+                    android:inputType="none"
+                    android:textColorHint="@color/hintText"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toEndOf="@+id/labelCourseEnd"
+                    app:layout_constraintTop_toBottomOf="@+id/labelCourseStart" />
+
+                <TextView
+                    android:id="@+id/labelAssessmentsCourseDetail"
+                    android:layout_width="211dp"
+                    android:layout_height="36dp"
+                    android:gravity="center"
+                    android:text="Assessments"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toEndOf="@+id/coursesInsideCourseDetails"
+                    app:layout_constraintStart_toStartOf="@+id/coursesInsideCourseDetails"
+                    app:layout_constraintTop_toBottomOf="@+id/editNote" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
