--- a/app/src/main/res/layout/activity_course_screen.xml
+++ b/app/src/main/res/layout/activity_course_screen.xml
@@ -14,4 +14,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addCourseAction"
+        android:layout_width="60dp"
+        android:layout_height="61dp"
+        android:layout_margin="10dp"
+        android:clickable="true"
+        android:contentDescription="add"
+        android:onClick="goToCourseDetailScreen"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_add" />
 </androidx.constraintlayout.widget.ConstraintLayout>
