--- a/app/src/main/res/layout/course_recycler_row.xml
+++ b/app/src/main/res/layout/course_recycler_row.xml
@@ -20,6 +20,17 @@
             android:background="@color/teal_700">
 
             <TextView
+                android:id="@+id/courseRowTermName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginBottom="20dp"
+                android:text="TextView"
+                android:textColor="@color/purple_500"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
                 android:id="@+id/courseRowTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
