ALl Deletes work.

--- a/app/src/main/res/menu/menu_termdetails.xml
+++ b/app/src/main/res/menu/menu_termdetails.xml
@@ -3,5 +3,5 @@
 
     <item
         android:id="@+id/removeTerm"
-        android:title="Remove Term" />
+        android:title="Delete Term" />
 </menu>
